@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.28 2006/10/17 20:35:02 reho Exp $
+dnl $Id: configure.ac,v 1.29 2006/10/19 20:52:57 reho Exp $
 
 AC_INIT(amavisd-milter, 1.2.0)
 AC_CONFIG_SRCDIR(aclocal/acinclude.m4)
@@ -35,11 +35,10 @@ AC_CHECK_HEADERS([fts.h])
 AC_CHECK_FUNCS([arc4random])
 AC_REPLACE_FUNCS([daemon fts_open mkdtemp strlcpy])
 
-AX_PATH_MILTER([8.13], [LIBS="$MILTER_LIBS $LIBS"
+AX_PATH_MILTER([8.12], [LIBS="$MILTER_LIBS $LIBS"
   LDFLAGS="$MILTER_LDFLAGS $LDFLAGS" CPPFLAGS="$CPPFLAGS $MILTER_CPPFLAGS"],
   AC_MSG_ERROR([required milter library and header not found]))
-AC_CHECK_FUNCS([smfi_opensocket smfi_progress], [],
-  AC_MSG_ERROR([no usable libmilter library found]))
+AC_CHECK_FUNCS([smfi_insheader smfi_opensocket smfi_progress])
 
 AC_EILSEQ
 gl_EOVERFLOW
